Bug 571438 - MayHavePaintEventListener fails for non-e10s message manager, r=jst